--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,253 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+.navbar{
+  display:flex;
+  margin-right: 40px;
+  /* border: 2px solid black; */
+  padding:20px;
+  justify-content:center;
+  align-items:center;
+  gap: 3rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.header{
+  background-color:rgb(0, 0, 0);
+  backdrop-filter: blur(20px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color:rgb(255, 255, 255);
+  /* width:100%;
+  height:100px;
+  margin-bottom:40px; */
+}
+
+.navbar li{
+  /* margin-right:30px; */
+  font-size:20px;
+  font-family:sen-serif;
+  transition: all 0.3s ease-in;
+  border-bottom: 2px solid transparent;
+  font-weight:600;
+  cursor:pointer;
+}
+
+.navbar li:hover{
+  color: red;
+  text-decoration:underline;
+  text-shadow: 2px 2px 3px rgba(39, 38, 38, 0.849),
+  4px 4px 5px rgba(82, 1, 1, 0.849);
+
+}
+
+.logo{
+  color: rgb(255, 0, 0);
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: 'Times New Roman', Times, serif;
+  margin-left: 20px;
+}
+.logo span{
+  text-shadow: 0px 0px 5px rgb(109, 0, 0),
+  5px 5px 5px rgb(99, 0, 0) 
+}
+
+.parent-container{
+  width:100%;
+  height:100vh;
+  overflow:auto;
+  background-color:rgb(8, 8, 8);
+  display:flex;
+  justify-content:center;
+  padding: 30px;
+  flex-wrap:wrap;
+  color:white;
+  
+}
+
+
+
+.child-container{
+  width: 250px;
+  height: 415px;
+  margin-left: 30px;
+  background-color:rgb(39, 36, 36);
+  color:rgb(228, 251, 252);
+  border:3px solid rgb(20, 20, 20);
+  border-radius:20px;
+  /* margin:10px; */
+  padding:13px;
+  margin-bottom:50px;
+  margin-top:10px;
+  font-family:"sen-serif";
+  transition: 0.3s ease-in-out;
+}
+
+.child-container:hover{
+  border: 1px solid rgb(255, 0, 13);
+  box-shadow: rgba(39, 39, 39, 0.25) 0px 25px 30px,
+              rgba(46, 34, 34, 0.12) 0px -12px 30px,
+              rgba(77, 0, 0, 0.616) 0px 5px 7px,
+              rgba(53, 1, 1, 0.521) 0px 10px 11px,
+              rgba(138, 0, 0, 0.644) 0px -3px 5px;
+ }
+
+.image-container Image{
+  width:100%;
+  height:130px;
+  background-color:rgb(68, 68, 68);
+  border-radius:10px;
+}
+
+.Rs{
+  font-weight:700;
+  font-family:monospace;
+  font-size: 1.2rem;
+  margin-top:15px;
+  margin-bottom:10px;
+  color:rgb(255, 255, 255); 
+}
+
+.description{
+  font-size: 0.9rem;
+  color: aliceblue;
+  margin-top:20px;
+  font-family: serif;
+}
+
+.child-container .btn{
+  width: 60%;
+  margin: auto;
+  padding: 5px;
+  border: 2px solid rgba(253, 238, 99, 0.966);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  font-size: 1rem;
+  transition: 0.3s;
+  background-color:rgb(255, 13, 33);
+  justify-content: center;
+  display: flex;
+}
+
+.btn:hover{
+  color: rgb(255, 25, 25);
+  background-color: white;
+  border: 3px solid rgb(0, 0, 0);
+  font-size:0.8rem;
+  font-weight:700;
+}
+
+.container-one{
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  background-color:rgb(8, 8, 8);
+}
+
+.container-one .container-two{
+  width:100%;
+  height:90%;
+  display:flex;
+  background-color:rgb(32, 32, 32);
+  justify-content:center;
+  align-items:center;
+}
+
+.container-two .container-image{
+  /* border: 3px solid white; */
+  width:480px;
+  height:70%;
+  margin:15px;
+}
+
+.container-image .Image{
+  /* display: inline-block; */
+  justify-content: center;
+  border: 3px solid black;
+}
+
+.container-two .container-text{
+  justify-content: center;
+  /* border: 3px solid white; */
+  color:white;
+  width:450px;
+  height:70%;
+  margin: 15px;
+}
+
+.big-head{
+  font-size:30px;
+  font-weight:800;
+  margin-top:60px;
+  margin-bottom:30px;
+  margin-left:10px;
+
+}
+
+.normal-text{
+  margin:10px;
+}
+
+.order{
+  width:50%;
+  height:60px;
+  background-color:red;
+  color:white;
+  justify-content:center;
+  margin-left:10px;
+  border-radius:10px;
+  font-weight:800;
+  margin-top:20px;
+}
+
+.about-food{
+  text-align:center;
+  color:red;
+  font-size:50px;
+  font-weight:700;
+  margin:auto;
+}
+
+.about-food .food{
+  border:3px solid white;
+}
+
+h2, h4{
+  font-size:15px;
+  color:rgb(255, 143, 143);
+  font-weight:20px;
+  text-align:center;
+}
+
+h3{
+  font-size:20px;
+  margin-top:15px;
+  margin-bottom:10px;
+  color:rgba(255, 255, 154, 0.849)
+}
+
+@media only screen and  (max-width:599px){
+  .child-container{
+    width: 70%;
+  }
+  .image-container Image{
+    height:100px
   }
 }
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@media only screen and  (max-width:450px){
+  .child-container{
+    width: 90%;
   }
 }
+/* @media only screen and (max-width:786px){
+  .header{
+    width: 100%;
+    padding: 1.5rem;
+  }
+  .header .navbar{
+    display: none;
+  }
+} */
