--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,142 +4,8 @@
 
 
 
-.navbar{
-  display:flex;
-  margin-right: 40px;
-  /* border: 2px solid black; */
-  padding:20px;
-  justify-content:center;
-  align-items:center;
-  gap: 3rem;
-}
-
-.header{
-  background-color:rgb(0, 0, 0);
-  backdrop-filter: blur(20px);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color:rgb(255, 255, 255);
-  /* width:100%;
-  height:100px;
-  margin-bottom:40px; */
-}
-
-.navbar li{
-  /* margin-right:30px; */
-  font-size:20px;
-  font-family:sen-serif;
-  transition: all 0.3s ease-in;
-  border-bottom: 2px solid transparent;
-  font-weight:600;
-  cursor:pointer;
-}
-
-.navbar li:hover{
-  color: red;
-  text-decoration:underline;
-  text-shadow: 2px 2px 3px rgba(39, 38, 38, 0.849),
-  4px 4px 5px rgba(82, 1, 1, 0.849);
-
-}
-
-.logo{
-  color: rgb(255, 0, 0);
-  font-size: 1.5rem;
-  font-weight: 600;
-  font-family: 'Times New Roman', Times, serif;
-  margin-left: 20px;
-}
-.logo span{
-  text-shadow: 0px 0px 5px rgb(109, 0, 0),
-  5px 5px 5px rgb(99, 0, 0) 
-}
-
-.parent-container{
-  width:100%;
-  height:100vh;
-  overflow:auto;
-  background-color:rgb(8, 8, 8);
-  display:flex;
-  justify-content:center;
-  padding: 30px;
-  flex-wrap:wrap;
-  color:white;
-  
-}
 
 
-
-.child-container{
-  width: 250px;
-  height: 415px;
-  margin-left: 30px;
-  background-color:rgb(39, 36, 36);
-  color:rgb(228, 251, 252);
-  border:3px solid rgb(20, 20, 20);
-  border-radius:20px;
-  /* margin:10px; */
-  padding:13px;
-  margin-bottom:50px;
-  margin-top:10px;
-  font-family:"sen-serif";
-  transition: 0.3s ease-in-out;
-}
-
-.child-container:hover{
-  border: 1px solid rgb(255, 0, 13);
-  box-shadow: rgba(39, 39, 39, 0.25) 0px 25px 30px,
-              rgba(46, 34, 34, 0.12) 0px -12px 30px,
-              rgba(77, 0, 0, 0.616) 0px 5px 7px,
-              rgba(53, 1, 1, 0.521) 0px 10px 11px,
-              rgba(138, 0, 0, 0.644) 0px -3px 5px;
- }
-
-.image-container Image{
-  width:100%;
-  height:130px;
-  background-color:rgb(68, 68, 68);
-  border-radius:10px;
-}
-
-.Rs{
-  font-weight:700;
-  font-family:monospace;
-  font-size: 1.2rem;
-  margin-top:15px;
-  margin-bottom:10px;
-  color:rgb(255, 255, 255); 
-}
-
-.description{
-  font-size: 0.9rem;
-  color: aliceblue;
-  margin-top:20px;
-  font-family: serif;
-}
-
-.child-container .btn{
-  width: 60%;
-  margin: auto;
-  padding: 5px;
-  border: 2px solid rgba(253, 238, 99, 0.966);
-  color: rgb(255, 255, 255);
-  border-radius: 10px;
-  font-size: 1rem;
-  transition: 0.3s;
-  background-color:rgb(255, 13, 33);
-  justify-content: center;
-  display: flex;
-}
-
-.btn:hover{
-  color: rgb(255, 25, 25);
-  background-color: white;
-  border: 3px solid rgb(0, 0, 0);
-  font-size:0.8rem;
-  font-weight:700;
-}
 
 .container-one{
   display: flex;
@@ -204,51 +70,128 @@
   margin-top:20px;
 }
 
-.about-food{
-  text-align:center;
-  color:red;
-  font-size:50px;
+.about{
+  display:flex;
+  align-items:center;
+  justify-content:space-around;
+  padding: 120px 0px 120px 0px;
+  background-color:rgb(8, 8, 8);
+  height:100vh;
+}
+
+.food-btn{
+  width: 400px;
+  height: 310px;
+  border: 3px solid black;
+}
+
+.ingredients-btn{
+  width: 400px;
+  height: 310px;
+  border: 3px solid black;
+}
+
+.know-btn{
+  width: 400px;
+  height: 310px;
+  border: 3px solid black;
+  
+}
+
+.about-div-heading{
+  font-size:30px;
+  color: red;
   font-weight:700;
-  margin:auto;
-}
-
-.about-food .food{
-  border:3px solid white;
-}
-
-h2, h4{
-  font-size:15px;
-  color:rgb(255, 143, 143);
-  font-weight:20px;
+  margin-top:20px;
+  margin-bottom:20px;
   text-align:center;
 }
+
+.about-div-btn{
+  width: 40%;
+  justify-content:center;
+  border:1px solid white;
+  border-radius: 4px;
+  color:black;
+  background-color:rgba(253, 238, 99, 0.966);
+  margin-left:110px;
+  margin-bottom:10px;
+}
+
+.about-div-btn:hover{
+  border: 1px solid black;
+}
+
+.food{
+  padding:20px;
+  background-color:rgb(8, 8, 8);
+  color:white;
+   
+}
+.ingredients{
+  padding:20px;
+  background-color:rgb(8, 8, 8);
+  color:white;
+   
+}
+
+.Our-ingredients{
+  width: 90%;
+  display: flex;
+  margin:auto;
+  margin-bottom: 150px;
+  justify-content: center;
+  border: 3px solid white;
+}
+
+
+.heading1{
+  font-size:60px;
+  margin: 40px;
+  color: red;
+  font-weight:700;
+  text-align:center;
+
+} 
+
+.div{
+  width:90%;
+  height: auto;
+  border:3px solid white;
+  border-radius: 5px;
+  display:flex;
+  margin: 0 auto;
+  margin-bottom:30px;
+  
+
+}
+
+.pic {
+  width:50%;
+  height:100%;
+}
+
+.dis{
+  width:50%;
+  text-align:center;
+  margin-right:30px;
+}
+
+
+.heading2{
+  font-size:45px;
+  margin: 20px;
+  color: red;
+  font-weight:700;
+  text-align:center;
+}
+
+
 
 h3{
   font-size:20px;
   margin-top:15px;
   margin-bottom:10px;
-  color:rgba(255, 255, 154, 0.849)
+  color:rgba(255, 255, 154, 0.849);
 }
 
-@media only screen and  (max-width:599px){
-  .child-container{
-    width: 70%;
-  }
-  .image-container Image{
-    height:100px
-  }
-}
-@media only screen and  (max-width:450px){
-  .child-container{
-    width: 90%;
-  }
-}
-/* @media only screen and (max-width:786px){
-  .header{
-    width: 100%;
-    padding: 1.5rem;
-  }
-  .header .navbar{
-    display: none;
-  }
-} */
