--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-
-
+@layer utilities {
+  .text-stroke {
+    -webkit-text-stroke: 0.6px black; /* Stroke width and color */
+    color: white; /* Optional: Makes the text fill transparent */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+  }
+  .text-stroke2 {
+    -webkit-text-stroke: 2px black; /* Stroke width and color */
+    color: red; /* Optional: Makes the text fill transparent */
+  }
+}
 
 .container-one{
   display: flex;
